--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 </head>
 <body>
     <h1>Password Picker</h1>
+
+    <div class="container">
+        <label for="passwordLength">Password Length:</label>
+        <input type="number" id="passwordLength" min="1" max="128" value="12">
+
+        <label for="includeNumbers">Include Numbers:</label>
+        <input type="checkbox" id="includeNumbers" checked>
+
+        <label for="includeSymbols">Include Symbols:</label>
+        <input type="checkbox" id="includeSymbols" checked>
+
+        <button id="generateButton">Generate Password</button>
+        <button id="copyButton">Copy to Clipboard</button>
+    </div>
     
 
 
