--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <button id="generateButton">Generate Password</button>
         <button id="copyButton">Copy to Clipboard</button>
     </div>
+    <div class="output">
+        <h2>Generated Password:</h2>
+        <p id="passwordOutput">Click "Generate Password" to see your password!</p>
+        <textarea name="Output" id="OutputArea" placeholder="Here is your password"></textarea>
+    </div>
     
 
 
