--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <input type="number" id="passwordLength" min="1" max="128" value="12"> 
         <br>
         <label for="includeUppercase">Include Uppercase Letters:</label>
-        <input type="checkbox" id="includeUppercase" checked>
+        <input type="checkbox" id="upper" name="upper" checked>
         <br>
         <label for="includeLowercase">Include Lowercase Letters:</label>
-        <input type="checkbox" id="includeLowercase" checked>
+        <input type="checkbox" id="lower" name="lower" checked>
         <br>
         <label for="includeSpecial">Include Special Characters:</label>
-        <input type="checkbox" id="includeSpecial" checked>
+        <input type="checkbox" id="special" name="special" checked>
         <br>
 
         <label for="includeNumbers">Include Numbers:</label>
-        <input type="checkbox" id="includeNumbers" checked>
+        <input type="checkbox" id="numbers" name="numbers" checked>
 
         <br>
 
