--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <label for="passwordLength">Password Length:</label>
-        <input type="number" id="passwordLength" min="1" max="128" value="12"> 
+        <input type="number" id="passwordLength" name="passwordLength" min="1" max="128" value="12"> 
         <br>
         <label for="includeUppercase">Include Uppercase Letters:</label>
         <input type="checkbox" id="upper" name="upper" checked>
