--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <h2>Password:</h2>
         <textarea name="Output" id="OutputArea" placeholder="Here is your password"></textarea>
         <button id="copyButton">Copy to Clipboard</button>
+        <button id="clearButton">Clear</button>
     </div>
     
 
