--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <br>
         <h2>Password:</h2>
         <textarea name="Output" id="OutputArea" placeholder="Here is your password"></textarea>
-        <button id="copyButton">Copy to Clipboard</button>
+        <!-- <button id="copyButton">Copy to Clipboard</button> -->
         <button id="clearButton">Clear</button>
         <br>
         <button id="copyButton">Copy to Clipboard</button>
