--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <textarea name="Output" id="OutputArea" placeholder="Here is your password"></textarea>
         <button id="copyButton">Copy to Clipboard</button>
         <button id="clearButton">Clear</button>
-        <br>
-        <button id="copyButton">Copy to Clipboard</button>
+        <!-- <br>
+        <button id="copyButton">Copy to Clipboard</button> -->
     </div>
     
 
